dataset1235/2025-2/610742602/users/1980422981/executions/677928262_4233865845.log
== SUBMISSION (2025-08-26 21:26:28)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:27:44)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(Celcius,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:26:45)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(Celcius,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:27:36)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(Celcius,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:26:27)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(kelvin,2))
                ^^^^^^
NameError: name 'kelvin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:27:30)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(Celcius,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:26:45)
-- CODE: 
x=float(input())
Celcius=x*9/5+32
print(round(Celcius,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
